login logaout yapıldı

--- a/bitirme/templates/about.html
+++ b/bitirme/templates/about.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %} {% block title %} Hakkımızda {% endblock %}  {% block content %}
+{% extends "home_base.html" %} {% block title %} Hakkımızda {% endblock %}  {% block content %}
 
 <div class="container mt-5 mb-5">
     <div class="row">
