--- a/bitirme/templates/index.html
+++ b/bitirme/templates/index.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %} {% block title %} Hakkımızda {% endblock %}  {% block content %}
+{% extends "home_base.html" %} {% block title %} Hakkımızda {% endblock %}  {% block content %}
 
 <main class="content">
   <div class="container p-0">
