backend sistemi degisti front end düzeltildi

--- a/bitirme/templates/A_base.html
+++ b/bitirme/templates/A_base.html
@@ -22,9 +22,13 @@
             <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
                 
                 <ul class="nav col-2 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0 ">
-                    <p href="#" style="font-size: 20px;" class="nav-link px-2 text-white">my<span
-                                style="font-weight: bold; font-size: 30px;" class="text-warning">ETÜ</span></p>
+                    <p href="#" style="font-size: 25px;" class="nav-link px-2 text-white">ETÜ<span
+                                style="font-weight: bold; font-size: 35px;" class="text-warning">SAĞLIK</span></p>
                 </ul>
+                <!-- <ul href="/" style="font-size: 35px;"
+                class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">ETÜ<span
+                style="font-weight: bold; font-size: 27px;" class="text-warning">SAĞLIK</span>
+                </ul> -->
 
                 <div class="col-10 text-right ">
                     <a class="btn btn-outline-light me-2" href="/login" role="button">Login</a>
