--- a/bitirme/templates/A_login.html
+++ b/bitirme/templates/A_login.html
@@ -7,8 +7,8 @@
   
       <div class="col-sm-4">
         <div class="text-center">
-          <a href="#" style="font-size: 25px;" class="nav-link px-2 text-dark">my<span
-              style="font-weight: bold; font-size: 40px; color: orange;">ETÜ</span></a>
+          <a href="#" style="font-size: 25px;" class="nav-link px-2 text-dark">ETÜ<span
+              style="font-weight: bold; font-size: 40px; color: orange;">SAĞLIK</span></a>
         </div>
         </br>
         <form method="POST">
