--- a/bitirme/templates/A_signup.html
+++ b/bitirme/templates/A_signup.html
@@ -7,10 +7,9 @@
         <div class="col-sm-4">
    
           <div class="text-center">
-            <a href="#" style="font-size: 25px;" class="nav-link px-2 text-secondary">my<span 
-              style="font-weight: bold; font-size: 40px; color: orange;"
-              >ETÜ</span></a>
-            </div>
+            <a href="#" style="font-size: 25px;" class="nav-link px-2 text-dark">ETÜ<span
+                style="font-weight: bold; font-size: 40px; color: orange;">SAĞLIK</span></a>
+          </div>
           </br>
           <form method="POST">
             <h3 align="center">Sign Up</h3>
