--- a/bitirme/templates/home_base.html
+++ b/bitirme/templates/home_base.html
@@ -57,7 +57,7 @@
                             <hr class="dropdown-divider">
                         </li>
             
-                        <li><a class="dropdown-item" href="/profil_ayarları">Ayarlar</a></li>
+                        <li><a class="dropdown-item" href="/hesap_ayarlari">Ayarlar</a></li>
                         <li>
                             <hr class="dropdown-divider">
                         </li>
@@ -67,6 +67,24 @@
             </div>
         </div>
     </header>
+
+    {% with messages = get_flashed_messages(with_categories=true) %} {% if
+        messages %} {% for category, message in messages %} {% if category ==
+        'error' %}
+        <div class="alert alert-danger alter-dismissable fade show" role="alert">
+            {{ message }}
+            <button type="button" class="close" data-dismiss="alert">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        {% else %}
+        <div class="alert alert-success alter-dismissable fade show" role="alert">
+            {{ message }}
+            <button type="button" class="close" data-dismiss="alert">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        {% endif %} {% endfor %} {% endif %} {% endwith %}
 
     {% block content %}{% endblock %}
 
