Some bugs fixed and adding new features to frontend

--- a/bitirme/templates/A_base.html
+++ b/bitirme/templates/A_base.html
@@ -23,7 +23,7 @@
                 
                 <ul class="nav col-2 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0 ">
                     <p href="#" style="font-size: 25px;" class="nav-link px-2 text-white">ETÜ<span
-                                style="font-weight: bold; font-size: 35px;" class="text-warning">SAĞLIK</span></p>
+                                style="font-weight: bold; font-size: 35px;" class="text-warning">HEALTH</span></p>
                 </ul>
                 <!-- <ul href="/" style="font-size: 35px;"
                 class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">ETÜ<span
