--- a/bitirme/templates/A_login.html
+++ b/bitirme/templates/A_login.html
@@ -8,7 +8,7 @@
       <div class="col-sm-4">
         <div class="text-center">
           <a href="#" style="font-size: 25px;" class="nav-link px-2 text-dark">ETÜ<span
-              style="font-weight: bold; font-size: 40px; color: orange;">SAĞLIK</span></a>
+              style="font-weight: bold; font-size: 40px; color: orange;">HEALTH</span></a>
         </div>
         </br>
         <form method="POST">
@@ -30,8 +30,8 @@
         </form>
   
         <div class="text-center mt-3"> 
-            <p style="font-size: 13px;">Hesabınız yok mu ?
-                <a href="http://127.0.0.1:5000/sign-up" style="font-size: 13px;">Kaydol</a>
+            <p style="font-size: 13px;">Don't you have an account ?
+                <a href="/sign-up" style="font-size: 13px;">Sign-up</a>
             </p>
         </div>
         
@@ -40,5 +40,13 @@
       </div>
     </div>
   </div>
-  
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
   {% endblock %}
