--- a/bitirme/templates/about.html
+++ b/bitirme/templates/about.html
@@ -4,7 +4,7 @@
     <div class="row">
         <div class="col-sm-2"></div>
         <div class="col-sm-10">
-            <h1> HAKKIMIZDA </h1>
+            <h1> ABOUT US </h1>
         </div>           
     </div>
 </div>
@@ -19,7 +19,7 @@
         </div>
         <div class="col-sm-1"></div>
         <div class="col-md-3">
-            <img class="featurette-image img-fluid mx-auto" src="https://www.etu.edu.tr/files/akademik/2018/11/02/1941e45435a638504e7c58835141259c.jpg" alt="Generic placeholder image">
+            <img class="featurette-image img-fluid mx-auto" src="../static/profile_pics/fotoAhmet.png" alt="Generic placeholder image">
         </div>
         <div class="col-sm-1"></div>
     </div>
@@ -31,13 +31,14 @@
     <div class="row featurette">
         <div class="col-sm-1"></div>
         <div class="col-md-6 mt-5">
-            <h2 class="featurette-heading">KEREM YALÇINKAYA <span class="text-muted">It'll blow your mind.</span></h2>
+            <h2 class="featurette-heading">KEREM YALÇINKAYA <span class="text-muted"></span></h2>
+            <h2 class="featurette-heading"><span class="text-muted">Student</span></h2>
             <p class="lead">
-    Ahmet Karamercan was born in Çanakkale, Turkey, in 2001. He finished high school in 2019 then He got into TOBB University of Economics and Technology. Now, He is a third grade computer engineering student.</p>
+    Kerem Yalçınkaya was born in İstanbul, Turkey, in 2001. He finished high school in 2019 then He got into TOBB University of Economics and Technology. Now, He is a fourth grade computer engineering student.</p>
         </div>
         <div class="col-sm-1"></div>
         <div class="col-md-3">
-            <img class="featurette-image img-fluid mx-auto" src="https://www.etu.edu.tr/files/akademik/2018/11/02/1941e45435a638504e7c58835141259c.jpg" alt="Generic placeholder image">
+            <img class="featurette-image img-fluid mx-auto" src="../static/profile_pics/fotoKerem.jpeg" alt="Generic placeholder image">
         </div>
         <div class="col-sm-1"></div>
     </div>
