--- a/bitirme/templates/foto_settings.html
+++ b/bitirme/templates/foto_settings.html
@@ -13,11 +13,13 @@
                 <div class="nav flex-column nav-tabs mt-5 ">
                     <ul class="nav nav-tabs text-warning">
                         <li class="nav-item">
-                            <a class="nav-link active text-white bg-secondary" aria-current="page" href="#">Fotoğraf
-                                ayarları</a>
+                            <a class="nav-link active text-white bg-secondary" aria-current="page" href="#">Add Fotograph</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="/hesap_ayarlari">Hesap Bilgileri</a>
+                            <a class="nav-link text-dark" href="/account_settings">Account Information</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="/delete_account">Delete Account</a>
                         </li>
                     </ul>
                 </div>
@@ -29,7 +31,7 @@
 
                         <div class="col-sm-1"> </div>
                         <div class="col-sm-5">
-                            <h3>Fotoğraf</h3>
+                            <h3>Photograph</h3>
                             <div class="col-lg-6 mt-3 ">
                                 <!-- <svg class="bd-placeholder-img rounded-circle" width="180" height="180" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><image href="static/profile_pics/{{user.image_file}}" width="200"/></svg> -->
                                 <img src="static/profile_pics/{{user.image_file}}" alt="Admin"
@@ -42,7 +44,7 @@
     
                             <br />
                             <div class="text-center">
-                                <button type="submit" class="btn btn-warning">Kaydet</button>
+                                <button type="submit" class="btn btn-warning px-3">Save</button>
                             </div>
                         </div>
                         <div class="col-sm-5">
@@ -53,7 +55,11 @@
     
     
                 </form>
-    
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
             </div>
             <div class="col-sm-1"></div>
         </div>
