--- a/bitirme/templates/A_signup.html
+++ b/bitirme/templates/A_signup.html
@@ -8,7 +8,7 @@
    
           <div class="text-center">
             <a href="#" style="font-size: 25px;" class="nav-link px-2 text-dark">ETÜ<span
-                style="font-weight: bold; font-size: 40px; color: orange;">SAĞLIK</span></a>
+                style="font-weight: bold; font-size: 40px; color: orange;">HEALTH</span></a>
           </div>
           </br>
           <form method="POST">
