--- a/bitirme/templates/account_settings.html
+++ b/bitirme/templates/account_settings.html
@@ -8,10 +8,13 @@
                 <div class="nav flex-column nav-tabs mt-5 ">
                     <ul class="nav nav-tabs text-warning">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="/foto_ayarlari">Fotoğraf Ekleme</a>
+                            <a class="nav-link text-dark" href="/foto_settings">Add Fotograph</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active text-white bg-secondary" aria-current="page" href="#">Hesap Bilgileri</a>
+                            <a class="nav-link active text-white bg-secondary" aria-current="page" href="#">Account Information</a>
+                        </li>
+                        <li class="nav-item">
+                            <a  class="nav-link text-dark" href="/delete_account">Delete Account</a>
                         </li>
                     </ul>
                 </div>
@@ -21,24 +24,24 @@
                     <div class="row mt-2">
                         <div class="col-sm-1"> </div>
                         <div class="col-sm-5">
-                            <h3>Hesap Bilgileri</h3>
+                            <h3>Account Informations</h3>
                             <br>
-                            <p>Sadece değiştirmek istediklerinizi yazın.</p>
+                            <p>Write only what you want to change.</p>
                          
                             
                             <div class="form-group mb-3">
-                                <label for="firstName" class="form-label">İsim</label>
+                                <label for="firstName" class="form-label">Name</label>
                                 <input type="text" class="form-control" id="firstName" name="firstName"
                                     placeholder="{{current_user.first_name}}" />
                             </div>
                             <div class="form-group mb-3">
-                                <label for="lastName" class="form-label">Soy İsim</label>
+                                <label for="lastName" class="form-label">Last Name</label>
                                 <input type="text" class="form-control" id="lastName" name="lastName"
                                     placeholder="{{current_user.last_name}}" />
                             </div>
 
                             <div class="form-group mt-3">
-                                <label for="email"  class="form-label">Email Adresi</label>
+                                <label for="email"  class="form-label">Email Adress</label>
                                 <div class="input-group mb-3">
                                     <span class="input-group-text" id="basic-addon1">@</span>
                                     <input type="email" class="form-control" id="email" name="email" placeholder="{{current_user.email}}" />
@@ -48,19 +51,19 @@
 
 
                             <div class="form-group mt-3">
-                                <label for="password1"  class="form-label">Şifre</label>
+                                <label for="password1"  class="form-label">Password</label>
                                 <input type="password" class="form-control" id="password1" name="password1"
                                     placeholder="Enter password" />
                             </div>
                             <div class="form-group mt-3">
-                                <label for="password2"  class="form-label">Şifre (Onayla)</label>
+                                <label for="password2"  class="form-label">Password (Approve)</label>
                                 <input type="password" class="form-control" id="password2" name="password2"
                                     placeholder="Confirm password" />
                             </div>
                             
                             <br />
                             <div class="text-center">
-                                <button type="submit" class="btn btn-warning">Kaydet</button>
+                                <button type="submit" class="btn btn-warning">Save</button>
                                 
                             </div>
                         </div>
